--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1W6XiTPA0zIVKrbd2hzaXnoyGY9NWtdlS",
+      "authorship_tag": "ABX9TyPCIy8OVPm0uwQMor6VnWlT",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,9 +19,21 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jb00753/Data-Analytics/blob/main/Project1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# Project 1\n",
-        "\n",
+        "#\n",
+        "Link to my Github repository: https://github.com/jb00753/Data-Analytics\n",
+        "##\n",
         "I selected a data set from Kaggle titled: Car_Sales_Info. This data covers car sales, trends, and prices that the cars sold for.\n",
         "\n",
         "My question to answer during the course of this project is: \"What are the most significant factors that influence used cars prices?\n",
